# autotools

./: .gitignore  Doxyfile.in  Makefile.am  README.md  configure.ac
lib/: Makefile.am  libtest.cpp  libtest.h
src/: Makefile.am  main.cpp
